--- a/index.html
+++ b/index.html
@@ -2,10 +2,34 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Odin's Project - Rock, Paper, Scissors</title>
-<script src="rps_game.js"></script>
+  <title>Odin's Project - Rock Paper Scissors</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+  <script src="rps_game.js" defer></script>
 </head>
 <body>
-
+<div class="title_container">
+  <div class="title"><h1>Rock, Paper or Scissors</h1></div>
+</div>
+<div class="game_container">
+  <div class="round_container">
+    <div><p>Scores</p></div>
+    <div id="scores_container">
+      <div id="player_score"></div>
+      <div id="separator"> - </div>
+      <div id="computer_score"></div>
+    </div>
+    <div id="round_container"></div>
+  </div>
+  <div id="buttons-container" class="button-container">
+    <div id="buttons_all">
+      <div id="buttons" class="button1"><img id="btn_rock" width="122" height="200" alt="rock" src="/images/rock.png"></div> 
+      <div id="buttons" class="button2"><img id="btn_paper" width="122" height="200" alt="paper" src="/images/paper.png"></div>
+      <div id="buttons" class="button3"><img id="btn_scissors" width="122" height="200" alt="scissors" src="/images/scissors.png"></div>
+    </div>
+  </div>
+  <div id="results_container" class="results_container"></div>
+  <div id="star_game_button_container"></div>
+</div>
 </body>
 </html>
