Solves images not loading

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   </div>
   <div id="buttons-container" class="button-container">
     <div id="buttons_all">
-      <div id="buttons" class="button1"><img id="btn_rock" width="122" height="200" alt="rock" src="/images/rock.png"></div> 
-      <div id="buttons" class="button2"><img id="btn_paper" width="122" height="200" alt="paper" src="/images/paper.png"></div>
-      <div id="buttons" class="button3"><img id="btn_scissors" width="122" height="200" alt="scissors" src="/images/scissors.png"></div>
+      <div id="buttons" class="button1"><img id="btn_rock" width="122" height="200" alt="rock" src="images/rock.png"></div> 
+      <div id="buttons" class="button2"><img id="btn_paper" width="122" height="200" alt="paper" src="images/paper.png"></div>
+      <div id="buttons" class="button3"><img id="btn_scissors" width="122" height="200" alt="scissors" src="images/scissors.png"></div>
     </div>
   </div>
   <div id="results_container" class="results_container"></div>
