Adds winner text, styles restart button, styles buttons

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     </div>
   </div>
   <div id="results_container" class="results_container"></div>
+  <div id="winner_container" class="winner_container"></div>
   <div id="star_game_button_container"></div>
+  
 </div>
 </body>
 </html>
